
OPF_TEST_FILES = bind.opf effects.opf empty.opf \
	fail.opf meta-fact-goal.opf \
	maint.opf all.opf array.opf \
	boundp.opf car-cdr.opf command.opf \
	copy-env.opf current.opf error.opf foo.opf \
	goal-old.opf goal.opf intention.opf mtime.opf \
	mult-var.opf prop.opf read.opf test.opf wait.opf \
	ff-val.opf cons-term.opf del-ll.opf special.opf \
	critical.opf text-opf-torture.opf append.opf \
	semaphore.opf

INC_TEST_FILES = empty.inc database.inc all.inc \
	array.inc bind.inc boundp.inc car-cdr.inc \
	copy-env.inc current.inc failed.inc goal.inc \
	intention.inc maint.inc read.inc \
	wait.inc ff-val.inc cons-term.inc \
	del-ll.inc special.inc critical.inc \
	text-opf-torture.inc semaphore.inc meta-fact-goal.inc ipp-test.inc

DB_TEST_FILES = bind.db maint.db ipp-test.db

pkgdatatestdir = $(pkgdatadir)/data/test
pkgdatatest_DATA =  $(INC_TEST_FILES) $(OPF_TEST_FILES) $(DB_TEST_FILES)
